Logistic_regression_concise

--- a/notebooks/Logistic_regression.ipynb
+++ b/notebooks/Logistic_regression.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4a90e192-ce9d-4ff9-86bc-b88b388198cd",
+   "metadata": {},
+   "source": [
+    "# Logistic Regression on Image Classification — Project Step\n",
+    "\n",
+    "This experiment is part of a longer journey toward building a complete image-classification system from scratch. I started with **linear and logistic regression** to understand baseline performance on my dataset before moving to more advanced models.\n",
+    "\n",
+    "To train the model, all images were **resized to 64×64×3** and flattened into feature vectors. Logistic regression was then implemented manually (without deep-learning frameworks) using gradient descent, following the mathematical formulation learned in the course.\n",
+    "\n",
+    "The model reached a test accuracy of **70ss%** , which provided a simple but useful baseline for understanding how well linear models can separate the classes in pixel space.\n",
+    "\n",
+    "Even though the performance is limited, this step helped me validate the data pipeline, confirm that the labels and preprocessing work correctly, and prepare for more complex models in the upcoming stages of the project.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "4fa3be68-3c57-41ac-b7a2-527c89ef0e38",
