requirements.txt edited

--- a/notebooks/02-NN-model-1-hidden-layer.ipynb
+++ b/notebooks/02-NN-model-1-hidden-layer.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b45c22b5-65dc-4592-a95a-f56355a00144",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d6f0d5a7-c4a0-4736-9389-599afba6e693",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9f6b16a0-3f95-44b4-84c3-8815d613cad9",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "8a249930-2b2d-4cad-8497-b2a108521d1d",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "13390dbb-5ed3-49d6-8c4a-325514cc1461",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "edf1ebbb-8cf9-452b-905f-4e543171e781",
    "metadata": {},
    "outputs": [],
@@ -297,8 +297,9 @@
     "    # logprobs = ...\n",
     "    # cost = ...\n",
     "    # YOUR CODE STARTS HERE\n",
-    "    first_half = np.dot(Y,np.log(A2).T)\n",
-    "    socend_half= np.dot((1-Y),np.log(1-A2).T)\n",
+    "    eps = 1e-8\n",
+    "    first_half = np.dot(Y,np.log(A2 + eps).T)\n",
+    "    socend_half= np.dot((1-Y),np.log(1-A2 + eps).T)\n",
     "    cost= first_half + socend_half\n",
     "    cost/=-m\n",
     "    # YOUR CODE ENDS HERE\n",
@@ -311,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4a347cdb-cb80-469b-b7b1-31cbf63c707d",
    "metadata": {},
    "outputs": [],
@@ -379,11 +380,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "5daa5d16-2089-4fd7-bd43-77e361d90828",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import copy\n",
     "\n",
     "def update_parameters(parameters, grads, learning_rate = 1.2):\n",
     "    \"\"\"\n",
@@ -448,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "6cae8b55-4be8-44cf-a8b1-2231b81edfde",
    "metadata": {},
    "outputs": [],
@@ -465,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "68d8cfcf-93ea-41a7-8be0-182679f39f1d",
    "metadata": {},
    "outputs": [],
@@ -484,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "888353db-9450-4bd7-ac28-a5e01ff88abf",
    "metadata": {},
    "outputs": [],
@@ -504,8 +506,8 @@
     "    \"\"\"\n",
     "    \n",
     "    np.random.seed(3)\n",
-    "    n_x = layer_sizes(X, Y)[0]\n",
-    "    n_y = layer_sizes(X, Y)[2]\n",
+    "    n_x = layer_sizes(X_train, Y_train)[0]\n",
+    "    n_y = layer_sizes(X_train, Y_train)[2]\n",
     "    \n",
     "    # Initialize parameters\n",
     "    #(≈ 1 line of code)\n",
@@ -567,19 +569,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "e32e8422-aa62-4f77-a710-e37833d35bb1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost after iteration 0: 0.690161 | train acc: 70.71% | test acc: 74.01%\n",
+      "Cost after iteration 1000: 5.395031 | train acc: 29.36% | test acc: 25.99%\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[26]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m params = \u001b[43mnn_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_x\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY_train_org\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      2\u001b[39m \u001b[43m                  \u001b[49m\u001b[43mn_h\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m128\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m                  \u001b[49m\u001b[43mnum_iterations\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m10000\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m                  \u001b[49m\u001b[43mlearning_rate\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1.2\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m                  \u001b[49m\u001b[43mprint_cost\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m                  \u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtest_x\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m                  \u001b[49m\u001b[43mY_test\u001b[49m\u001b[43m=\u001b[49m\u001b[43mY_test_org\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 46\u001b[39m, in \u001b[36mnn_model\u001b[39m\u001b[34m(X_train, Y_train, n_h, num_iterations, learning_rate, print_cost, X_test, Y_test)\u001b[39m\n\u001b[32m     26\u001b[39m \u001b[38;5;66;03m# YOUR CODE ENDS HERE\u001b[39;00m\n\u001b[32m     27\u001b[39m \n\u001b[32m     28\u001b[39m \u001b[38;5;66;03m# Loop (gradient descent)\u001b[39;00m\n\u001b[32m     30\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m0\u001b[39m, num_iterations):\n\u001b[32m     31\u001b[39m \n\u001b[32m     32\u001b[39m     \u001b[38;5;66;03m#(≈ 4 lines of code)\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     44\u001b[39m \n\u001b[32m     45\u001b[39m     \u001b[38;5;66;03m# YOUR CODE STARTS HERE\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m46\u001b[39m     A2, cache = \u001b[43mforward_propagation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparameters\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     48\u001b[39m     cost = compute_cost(A2, Y_train)\n\u001b[32m     50\u001b[39m     grads = backward_propagation(parameters, cache, X_train, Y_train)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 33\u001b[39m, in \u001b[36mforward_propagation\u001b[39m\u001b[34m(X, parameters)\u001b[39m\n\u001b[32m     21\u001b[39m b2 = parameters[\u001b[33m\"\u001b[39m\u001b[33mb2\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m     23\u001b[39m \u001b[38;5;66;03m# YOUR CODE ENDS HERE\u001b[39;00m\n\u001b[32m     24\u001b[39m \n\u001b[32m     25\u001b[39m \u001b[38;5;66;03m# Implement Forward Propagation to calculate A2 (probabilities)\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     30\u001b[39m \u001b[38;5;66;03m# A2 = ...\u001b[39;00m\n\u001b[32m     31\u001b[39m \u001b[38;5;66;03m# YOUR CODE STARTS HERE\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m33\u001b[39m Z1 = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mW1\u001b[49m\u001b[43m,\u001b[49m\u001b[43mX\u001b[49m\u001b[43m)\u001b[49m+b1\n\u001b[32m     34\u001b[39m A1 = np.tanh(Z1)\n\u001b[32m     35\u001b[39m Z2 = np.dot(W2,A1) + b2\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
    "source": [
-    "params = nn_model(X_train_norm, Y_train_org,\n",
+    "params = nn_model(train_x, Y_train_org,\n",
     "                  n_h=128,\n",
     "                  num_iterations=10000,\n",
     "                  learning_rate=1.2,\n",
     "                  print_cost=True,\n",
-    "                  X_test=X_test_norm,\n",
+    "                  X_test=test_x,\n",
     "                  Y_test=Y_test_org)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8735ecf0-073b-4599-aaa7-1c94ef8510de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
