could't run  the code using the gpu using cupy I'll use other ways

--- a/notebooks/02-NN-model-1-hidden-layer.ipynb
+++ b/notebooks/02-NN-model-1-hidden-layer.ipynb
@@ -8,8 +8,9 @@
    "outputs": [],
    "source": [
     "import time\n",
-    "#import numpy as np\n",
-    "import cupy as np\n",
+    "import numpy as np\n",
+    "#import cupy as np\n",
+    "#coudb't appy the code to the gpu using cupy I'll use other ways\n",
     "import sys\n",
     "sys.path.append(\"../src\")\n",
     "from logistic_regression.xml_utils import parse_cvat_xml_all_labels, label_Y_binary\n",
