1 hidden NN implemented

--- a/notebooks/02-NN-model-1-hidden-layer.ipynb
+++ b/notebooks/02-NN-model-1-hidden-layer.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "8a249930-2b2d-4cad-8497-b2a108521d1d",
    "metadata": {},
    "outputs": [],
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "888353db-9450-4bd7-ac28-a5e01ff88abf",
    "metadata": {},
    "outputs": [],
@@ -571,32 +571,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "e32e8422-aa62-4f77-a710-e37833d35bb1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "libcurand.so.10: cannot open shared object file: No such file or directory",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m params = \u001b[43mnn_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_x\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY_train_org\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      2\u001b[39m \u001b[43m                  \u001b[49m\u001b[43mn_h\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m128\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m                  \u001b[49m\u001b[43mnum_iterations\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m10000\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m                  \u001b[49m\u001b[43mlearning_rate\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1.2\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m                  \u001b[49m\u001b[43mprint_cost\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m                  \u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtest_x\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m                  \u001b[49m\u001b[43mY_test\u001b[49m\u001b[43m=\u001b[49m\u001b[43mY_test_org\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 23\u001b[39m, in \u001b[36mnn_model\u001b[39m\u001b[34m(X_train, Y_train, n_h, num_iterations, learning_rate, print_cost, X_test, Y_test)\u001b[39m\n\u001b[32m     18\u001b[39m \u001b[38;5;66;03m# Initialize parameters\u001b[39;00m\n\u001b[32m     19\u001b[39m \u001b[38;5;66;03m#(≈ 1 line of code)\u001b[39;00m\n\u001b[32m     20\u001b[39m \u001b[38;5;66;03m# parameters = ...\u001b[39;00m\n\u001b[32m     21\u001b[39m \u001b[38;5;66;03m# YOUR CODE STARTS HERE\u001b[39;00m\n\u001b[32m     22\u001b[39m (n_x, n_h, n_y) = layer_sizes(X_train, Y_train)\n\u001b[32m---> \u001b[39m\u001b[32m23\u001b[39m parameters = \u001b[43minitialize_parameters\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn_x\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_h\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_y\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     26\u001b[39m \u001b[38;5;66;03m# YOUR CODE ENDS HERE\u001b[39;00m\n\u001b[32m     27\u001b[39m \n\u001b[32m     28\u001b[39m \u001b[38;5;66;03m# Loop (gradient descent)\u001b[39;00m\n\u001b[32m     30\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m0\u001b[39m, num_iterations):\n\u001b[32m     31\u001b[39m \n\u001b[32m     32\u001b[39m     \u001b[38;5;66;03m#(≈ 4 lines of code)\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     44\u001b[39m \n\u001b[32m     45\u001b[39m     \u001b[38;5;66;03m# YOUR CODE STARTS HERE\u001b[39;00m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 22\u001b[39m, in \u001b[36minitialize_parameters\u001b[39m\u001b[34m(n_x, n_h, n_y, seed)\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[33;03mArgument:\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[33;03mn_x -- size of the input layer\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     13\u001b[39m \u001b[33;03m                b2 -- bias vector of shape (n_y, 1)\u001b[39;00m\n\u001b[32m     14\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m    \n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m#(≈ 4 lines of code)\u001b[39;00m\n\u001b[32m     16\u001b[39m \u001b[38;5;66;03m# W1 = ...\u001b[39;00m\n\u001b[32m     17\u001b[39m \u001b[38;5;66;03m# b1 = ...\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     20\u001b[39m \u001b[38;5;66;03m# YOUR CODE STARTS HERE\u001b[39;00m\n\u001b[32m     21\u001b[39m \u001b[38;5;66;03m#np.random.seed(seed)\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m22\u001b[39m W1 = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrandom\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrandn\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn_h\u001b[49m\u001b[43m,\u001b[49m\u001b[43mn_x\u001b[49m\u001b[43m)\u001b[49m*\u001b[32m0.01\u001b[39m\n\u001b[32m     23\u001b[39m b1 = np.zeros((n_h,\u001b[32m1\u001b[39m))\n\u001b[32m     24\u001b[39m W2 = np.random.randn(n_y,n_h)*\u001b[32m0.01\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/myenv1/lib/python3.12/site-packages/cupy/random/_sample.py:84\u001b[39m, in \u001b[36mrandn\u001b[39m\u001b[34m(*size, **kwarg)\u001b[39m\n\u001b[32m     81\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m kwarg:\n\u001b[32m     82\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[33m'\u001b[39m\u001b[33mrandn() got unexpected keyword arguments \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m'\u001b[39m\n\u001b[32m     83\u001b[39m                     % \u001b[33m'\u001b[39m\u001b[33m, \u001b[39m\u001b[33m'\u001b[39m.join(kwarg.keys()))\n\u001b[32m---> \u001b[39m\u001b[32m84\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_distributions\u001b[49m\u001b[43m.\u001b[49m\u001b[43mnormal\u001b[49m\u001b[43m(\u001b[49m\u001b[43msize\u001b[49m\u001b[43m=\u001b[49m\u001b[43msize\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/myenv1/lib/python3.12/site-packages/cupy/random/_distributions.py:500\u001b[39m, in \u001b[36mnormal\u001b[39m\u001b[34m(loc, scale, size, dtype)\u001b[39m\n\u001b[32m    482\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mnormal\u001b[39m(loc=\u001b[32m0.0\u001b[39m, scale=\u001b[32m1.0\u001b[39m, size=\u001b[38;5;28;01mNone\u001b[39;00m, dtype=\u001b[38;5;28mfloat\u001b[39m):\n\u001b[32m    483\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Returns an array of normally distributed samples.\u001b[39;00m\n\u001b[32m    484\u001b[39m \n\u001b[32m    485\u001b[39m \u001b[33;03m    Args:\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    498\u001b[39m \n\u001b[32m    499\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m500\u001b[39m     rs = \u001b[43m_generator\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_random_state\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    501\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m rs.normal(loc, scale, size, dtype)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/myenv1/lib/python3.12/site-packages/cupy/random/_generator.py:1307\u001b[39m, in \u001b[36mget_random_state\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m   1305\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m seed \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   1306\u001b[39m         seed = numpy.uint64(\u001b[38;5;28mint\u001b[39m(seed))\n\u001b[32m-> \u001b[39m\u001b[32m1307\u001b[39m     rs = \u001b[43mRandomState\u001b[49m\u001b[43m(\u001b[49m\u001b[43mseed\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1308\u001b[39m     rs = _random_states.setdefault(dev.id, rs)\n\u001b[32m   1309\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m rs\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/My_projects /Damage_Vision_project/myenv1/lib/python3.12/site-packages/cupy/random/_generator.py:57\u001b[39m, in \u001b[36mRandomState.__init__\u001b[39m\u001b[34m(self, seed, method)\u001b[39m\n\u001b[32m     56\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, seed=\u001b[38;5;28;01mNone\u001b[39;00m, method=\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m---> \u001b[39m\u001b[32m57\u001b[39m     \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mcupy_backends\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcuda\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mlibs\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m curand\n\u001b[32m     59\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m method \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m     60\u001b[39m         method = curand.CURAND_RNG_PSEUDO_DEFAULT\n",
-      "\u001b[31mImportError\u001b[39m: libcurand.so.10: cannot open shared object file: No such file or directory"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost after iteration 0: 0.690161 | train acc: 70.71% | test acc: 74.01%\n",
+      "Final train accuracy: 70.71%\n",
+      "Final test accuracy:  74.01%\n"
      ]
     }
    ],
    "source": [
     "params = nn_model(train_x, Y_train_org,\n",
     "                  n_h=128,\n",
-    "                  num_iterations=10000,\n",
+    "                  num_iterations=1000,\n",
     "                  learning_rate=1.2,\n",
     "                  print_cost=True,\n",
     "                  X_test=test_x,\n",
