one hidden layer tested

--- a/notebooks/02-NN-model-1-hidden-layer.ipynb
+++ b/notebooks/02-NN-model-1-hidden-layer.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "944cea92-831b-43aa-bce4-8e3d00a78722",
+   "metadata": {},
+   "source": [
+    "## The one-hidden-layer neural network outperformed logistic regression (79.33% train accuracy, 73.39% test accuracy), but accuracy remains below the required level. Training was also slow due to lack of GPU utilization. Future models will address these issues."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "c591f187-fb63-4bbc-bf1e-bc9ba46b4286",
@@ -571,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "e32e8422-aa62-4f77-a710-e37833d35bb1",
    "metadata": {},
    "outputs": [
@@ -579,26 +587,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cost after iteration 0: 0.690161 | train acc: 70.71% | test acc: 74.01%\n",
-      "Final train accuracy: 70.71%\n",
-      "Final test accuracy:  74.01%\n"
+      "Cost after iteration 0: 0.690161 | train acc: 70.64% | test acc: 74.01%\n",
+      "Cost after iteration 1000: 0.536566 | train acc: 74.12% | test acc: 75.84%\n",
+      "Cost after iteration 2000: 0.488770 | train acc: 80.93% | test acc: 68.50%\n",
+      "Cost after iteration 3000: 0.425843 | train acc: 85.64% | test acc: 63.30%\n",
+      "Final train accuracy: 79.33%\n",
+      "Final test accuracy:  73.39%\n"
      ]
     }
    ],
    "source": [
     "params = nn_model(train_x, Y_train_org,\n",
     "                  n_h=128,\n",
-    "                  num_iterations=1000,\n",
-    "                  learning_rate=1.2,\n",
+    "                  num_iterations=4000,\n",
+    "                  learning_rate=0.01,\n",
     "                  print_cost=True,\n",
     "                  X_test=test_x,\n",
     "                  Y_test=Y_test_org)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef19e6ec-8692-4a92-bea5-dca888d8912a",
+   "metadata": {},
+   "source": [
+    "The one-hidden-layer neural network outperformed logistic regression (79.33% train accuracy, 73.39% test accuracy), but accuracy remains below the required level. Training was also slow due to lack of GPU utilization. Future models will address these issues."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8735ecf0-073b-4599-aaa7-1c94ef8510de",
+   "id": "90dc2336-866a-43c8-96a3-35e7558a0baa",
    "metadata": {},
    "outputs": [],
    "source": []
