pytorch model added

--- a/notebooks/02-NN-model-1-hidden-layer.ipynb
+++ b/notebooks/02-NN-model-1-hidden-layer.ipynb
@@ -5,7 +5,8 @@
    "id": "944cea92-831b-43aa-bce4-8e3d00a78722",
    "metadata": {},
    "source": [
-    "## The one-hidden-layer neural network outperformed logistic regression (79.33% train accuracy, 73.39% test accuracy), but accuracy remains below the required level. Training was also slow due to lack of GPU utilization. Future models will address these issues."
+    "## The one-hidden-layer neural network outperformed logistic regression (79.33% train accuracy, 73.39% test accuracy), but accuracy remains below the required level. \n",
+    "## Training was also slow because the code didn't run on the GPU. Future models will address these issues."
    ]
   },
   {
