--- a/notebooks/02-Deep_Neural_Network.ipynb
+++ b/notebooks/02-Deep_Neural_Network.ipynb
@@ -46,7 +46,96 @@
    "id": "d4a6743b-3ace-4e1f-94f8-8093661fdbde",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "def linear_activation_forward(A_prev, W, b, activation):\n",
+    "    \"\"\"\n",
+    "    Implement the forward propagation for the LINEAR->ACTIVATION layer\n",
+    "\n",
+    "    Arguments:\n",
+    "    A_prev -- activations from previous layer (or input data): (size of previous layer, number of examples)\n",
+    "    W -- weights matrix: numpy array of shape (size of current layer, size of previous layer)\n",
+    "    b -- bias vector, numpy array of shape (size of the current layer, 1)\n",
+    "    activation -- the activation to be used in this layer, stored as a text string: \"sigmoid\" or \"relu\"\n",
+    "\n",
+    "    Returns:\n",
+    "    A -- the output of the activation function, also called the post-activation value \n",
+    "    cache -- a python tuple containing \"linear_cache\" and \"activation_cache\";\n",
+    "             stored for computing the backward pass efficiently\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if activation == \"sigmoid\":\n",
+    "        #(≈ 2 lines of code)\n",
+    "        # Z, linear_cache = ...\n",
+    "        # A, activation_cache = ...\n",
+    "        # YOUR CODE STARTS HERE\n",
+    "        Z, linear_cache = linear_forward(A_prev, W, b)\n",
+    "        A, activation_cache = sigmoid(Z)\n",
+    "        \n",
+    "        # YOUR CODE ENDS HERE\n",
+    "    \n",
+    "    elif activation == \"relu\":\n",
+    "        #(≈ 2 lines of code)\n",
+    "        # Z, linear_cache = ...\n",
+    "        # A, activation_cache = ...\n",
+    "        # YOUR CODE STARTS HERE\n",
+    "        Z, linear_cache = linear_forward(A_prev, W, b)\n",
+    "        A, activation_cache = relu(Z)\n",
+    "        # YOUR CODE ENDS HERE\n",
+    "    cache = (linear_cache, activation_cache)\n",
+    "\n",
+    "    return A, cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f5454c0-ba7b-4187-8afb-772e81a72fef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def L_model_forward(X, parameters):\n",
+    "    \"\"\"\n",
+    "    Implement forward propagation for the [LINEAR->RELU]*(L-1)->LINEAR->SIGMOID computation\n",
+    "    \n",
+    "    Arguments:\n",
+    "    X -- data, numpy array of shape (input size, number of examples)\n",
+    "    parameters -- output of initialize_parameters_deep()\n",
+    "    \n",
+    "    Returns:\n",
+    "    AL -- activation value from the output (last) layer\n",
+    "    caches -- list of caches containing:\n",
+    "                every cache of linear_activation_forward() (there are L of them, indexed from 0 to L-1)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    caches = []\n",
+    "    A = X\n",
+    "    L = len(parameters) // 2                  # number of layers in the neural network\n",
+    "    \n",
+    "    # Implement [LINEAR -> RELU]*(L-1). Add \"cache\" to the \"caches\" list.\n",
+    "    # The for loop starts at 1 because layer 0 is the input\n",
+    "    for l in range(1, L):\n",
+    "        A_prev = A \n",
+    "        #(≈ 2 lines of code)\n",
+    "        # A, cache = ...\n",
+    "        # caches ...\n",
+    "        # YOUR CODE STARTS HERE\n",
+    "        A, cache = linear_activation_forward(A_prev, parameters['W' +str(l)], parameters['b' +str(l)], activation = \"relu\")\n",
+    "        caches.append(cache)\n",
+    "        # YOUR CODE ENDS HERE\n",
+    "    \n",
+    "    # Implement LINEAR -> SIGMOID. Add \"cache\" to the \"caches\" list.\n",
+    "    #(≈ 2 lines of code)\n",
+    "    # AL, cache = ...\n",
+    "    # caches ...\n",
+    "    # YOUR CODE STARTS HERE\n",
+    "    AL, cache = linear_activation_forward(A, parameters['W' +str(L)], parameters['b' +str(L)], activation = \"sigmoid\")\n",
+    "    caches.append(cache)\n",
+    "    # YOUR CODE ENDS HERE\n",
+    "          \n",
+    "    return AL, caches"
+   ]
   }
  ],
  "metadata": {
