cost comutation added

--- a/notebooks/02-Deep_Neural_Network.ipynb
+++ b/notebooks/02-Deep_Neural_Network.ipynb
@@ -95,7 +95,32 @@
    "outputs": [],
    "source": [
     "\n",
-    "def L_model_forward(X, parameters):\n",
+    "def def compute_cost(AL, Y):\n",
+    "    \"\"\"\n",
+    "    Implement the cost function defined by equation (7).\n",
+    "\n",
+    "    Arguments:\n",
+    "    AL -- probability vector corresponding to your label predictions, shape (1, number of examples)\n",
+    "    Y -- true \"label\" vector (for example: containing 0 if non-cat, 1 if cat), shape (1, number of examples)\n",
+    "\n",
+    "    Returns:\n",
+    "    cost -- cross-entropy cost\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    m = Y.shape[1]\n",
+    "\n",
+    "    # Compute loss from aL and y.\n",
+    "    # (≈ 1 lines of code)\n",
+    "    # cost = ...\n",
+    "    # YOUR CODE STARTS HERE\n",
+    "    cost = -(1/m) * np.sum(Y*np.log(AL)+(1-Y)*np.log(1-AL))\n",
+    "    \n",
+    "    # YOUR CODE ENDS HERE\n",
+    "    \n",
+    "    cost = np.squeeze(cost)      # To make sure your cost's shape is what we expect (e.g. this turns [[17]] into 17).\n",
+    "\n",
+    "    \n",
+    "    return cost(X, parameters):\n",
     "    \"\"\"\n",
     "    Implement forward propagation for the [LINEAR->RELU]*(L-1)->LINEAR->SIGMOID computation\n",
     "    \n",
@@ -136,6 +161,14 @@
     "          \n",
     "    return AL, caches"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8d8a649-cb0a-48cf-810f-55af0ca61ef4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
