--- a/notebooks/02-Deep_Neural_Network.ipynb
+++ b/notebooks/02-Deep_Neural_Network.ipynb
@@ -168,7 +168,159 @@
    "id": "d8d8a649-cb0a-48cf-810f-55af0ca61ef4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "def linear_backward(dZ, cache):\n",
+    "    \"\"\"\n",
+    "    Implement the linear portion of backward propagation for a single layer (layer l)\n",
+    "\n",
+    "    Arguments:\n",
+    "    dZ -- Gradient of the cost with respect to the linear output (of current layer l)\n",
+    "    cache -- tuple of values (A_prev, W, b) coming from the forward propagation in the current layer\n",
+    "\n",
+    "    Returns:\n",
+    "    dA_prev -- Gradient of the cost with respect to the activation (of the previous layer l-1), same shape as A_prev\n",
+    "    dW -- Gradient of the cost with respect to W (current layer l), same shape as W\n",
+    "    db -- Gradient of the cost with respect to b (current layer l), same shape as b\n",
+    "    \"\"\"\n",
+    "    A_prev, W, b = cache\n",
+    "    m = A_prev.shape[1]\n",
+    "\n",
+    "    ### START CODE HERE ### (≈ 3 lines of code)\n",
+    "    # dW = ...\n",
+    "    # db = ... sum by the rows of dZ with keepdims=True\n",
+    "    # dA_prev = ...\n",
+    "    # YOUR CODE STARTS HERE\n",
+    "    dW = np.dot(dZ,A_prev.T)/m\n",
+    "    db = np.sum(dZ, axis=1 , keepdims=True)/m\n",
+    "    dA_prev = np.dot(W.T,dZ)\n",
+    "    # YOUR CODE ENDS HERE\n",
+    "    \n",
+    "    return dA_prev, dW, db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0780c45d-4777-4065-813e-3f1b2273bc82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# GRADED FUNCTION: linear_activation_backward\n",
+    "​\n",
+    "def linear_activation_backward(dA, cache, activation):\n",
+    "    \"\"\"\n",
+    "    Implement the backward propagation for the LINEAR->ACTIVATION layer.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    dA -- post-activation gradient for current layer l \n",
+    "    cache -- tuple of values (linear_cache, activation_cache) we store for computing backward propagation efficiently\n",
+    "    activation -- the activation to be used in this layer, stored as a text string: \"sigmoid\" or \"relu\"\n",
+    "    \n",
+    "    Returns:\n",
+    "    dA_prev -- Gradient of the cost with respect to the activation (of the previous layer l-1), same shape as A_prev\n",
+    "    dW -- Gradient of the cost with respect to W (current layer l), same shape as W\n",
+    "    db -- Gradient of the cost with respect to b (current layer l), same shape as b\n",
+    "    \"\"\"\n",
+    "    linear_cache, activation_cache = cache\n",
+    "    \n",
+    "    if activation == \"relu\":\n",
+    "        #(≈ 2 lines of code)\n",
+    "        # dZ =  ...\n",
+    "        # dA_prev, dW, db =  ...\n",
+    "        # YOUR CODE STARTS HERE\n",
+    "        dZ = relu_backward(dA, activation_cache)\n",
+    "        dA_prev, dW, db = linear_backward(dZ, linear_cache)\n",
+    "        # YOUR CODE ENDS HERE\n",
+    "        \n",
+    "    elif activation == \"sigmoid\":\n",
+    "        #(≈ 2 lines of code)\n",
+    "        # dZ =  ...\n",
+    "        # dA_prev, dW, db =  ...\n",
+    "        # YOUR CODE STARTS HERE\n",
+    "        dZ = sigmoid_backward(dA, activation_cache)\n",
+    "        dA_prev, dW, db = linear_backward(dZ, linear_cache)\n",
+    "        \n",
+    "        # YOUR CODE ENDS HERE\n",
+    "    \n",
+    "    return dA_prev, dW, db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6e969f0-0b6c-457b-83c6-4871cfb6a125",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: L_model_backward\n",
+    "\n",
+    "def L_model_backward(AL, Y, caches):\n",
+    "    \"\"\"\n",
+    "    Implement the backward propagation for the [LINEAR->RELU] * (L-1) -> LINEAR -> SIGMOID group\n",
+    "    \n",
+    "    Arguments:\n",
+    "    AL -- probability vector, output of the forward propagation (L_model_forward())\n",
+    "    Y -- true \"label\" vector (containing 0 if non-cat, 1 if cat)\n",
+    "    caches -- list of caches containing:\n",
+    "                every cache of linear_activation_forward() with \"relu\" (it's caches[l], for l in range(L-1) i.e l = 0...L-2)\n",
+    "                the cache of linear_activation_forward() with \"sigmoid\" (it's caches[L-1])\n",
+    "    \n",
+    "    Returns:\n",
+    "    grads -- A dictionary with the gradients\n",
+    "             grads[\"dA\" + str(l)] = ... \n",
+    "             grads[\"dW\" + str(l)] = ...\n",
+    "             grads[\"db\" + str(l)] = ... \n",
+    "    \"\"\"\n",
+    "    grads = {}\n",
+    "    L = len(caches) # the number of layers\n",
+    "    m = AL.shape[1]\n",
+    "    Y = Y.reshape(AL.shape) # after this line, Y is the same shape as AL\n",
+    "    \n",
+    "    # Initializing the backpropagation\n",
+    "    #(1 line of code)\n",
+    "    # dAL = ...\n",
+    "    # YOUR CODE STARTS HERE\n",
+    "    dAL = - (np.divide(Y, AL) - np.divide(1 - Y, 1 - AL))\n",
+    "    \n",
+    "    # YOUR CODE ENDS HERE\n",
+    "    \n",
+    "    # Lth layer (SIGMOID -> LINEAR) gradients. Inputs: \"dAL, current_cache\". Outputs: \"grads[\"dAL-1\"], grads[\"dWL\"], grads[\"dbL\"]\n",
+    "    #(approx. 5 lines)\n",
+    "    # current_cache = ...\n",
+    "    # dA_prev_temp, dW_temp, db_temp = ...\n",
+    "    # grads[\"dA\" + str(L-1)] = ...\n",
+    "    # grads[\"dW\" + str(L)] = ...\n",
+    "    # grads[\"db\" + str(L)] = ...\n",
+    "    # YOUR CODE STARTS HERE\n",
+    "    current_cache = caches[L-1]\n",
+    "    dA_prev_temp, dW_temp, db_temp = linear_activation_backward(dAL, current_cache, activation = \"sigmoid\")\n",
+    "    grads[\"dA\" + str(L-1)] = dA_prev_temp\n",
+    "    grads[\"dW\" + str(L)] = dW_temp\n",
+    "    grads[\"db\" + str(L)] = db_temp\n",
+    "    # YOUR CODE ENDS HERE\n",
+    "    # Loop from l=L-2 to l=0\n",
+    "    for l in reversed(range(L-1)):\n",
+    "        # lth layer: (RELU -> LINEAR) gradients.\n",
+    "        # Inputs: \"grads[\"dA\" + str(l + 1)], current_cache\". Outputs: \"grads[\"dA\" + str(l)] , grads[\"dW\" + str(l + 1)] , grads[\"db\" + str(l + 1)] \n",
+    "        #(approx. 5 lines)\n",
+    "        # current_cache = ...\n",
+    "        # dA_prev_temp, dW_temp, db_temp = ...\n",
+    "        # grads[\"dA\" + str(l)] = ...\n",
+    "        # grads[\"dW\" + str(l + 1)] = ...\n",
+    "        # grads[\"db\" + str(l + 1)] = ...\n",
+    "        # YOUR CODE STARTS HERE\n",
+    "        current_cache = caches[l]\n",
+    "        dA_prev_temp, dW_temp, db_temp = linear_activation_backward(grads[\"dA\" + str(l+1)], current_cache, activation = \"relu\")\n",
+    "        grads[\"dA\" + str(l)] = dA_prev_temp\n",
+    "        grads[\"dW\" + str(l+1)] = dW_temp\n",
+    "        grads[\"db\" + str(l+1)] = db_temp\n",
+    "        \n",
+    "        # YOUR CODE ENDS HERE\n",
+    "\n",
+    "    return grads"
+   ]
   }
  ],
  "metadata": {
