--- a/notebooks/03.0_L_layer_model.ipynb
+++ b/notebooks/03.0_L_layer_model.ipynb
@@ -2,8 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d01ecebc-c031-4585-84bc-c386bf069372",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dnn_structure import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b82b3a4d-53e8-46a5-a9da-e472a5c311ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import sys\n",
+    "sys.path.append(\"../src\")\n",
+    "from Load_data.xml_utils import parse_cvat_xml_all_labels, label_Y_binary\n",
+    "from Load_data.data_loader import load_and_resize_images, build_label_array\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae8b83f5-0358-4900-8d73-5bd29532bdd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TRAIN_XML = \"../EIDSeg_Dataset/data/train/train.xml\"\n",
+    "TEST_XML = \"../EIDSeg_Dataset/data/test/test.xml\"\n",
+    "TRAIN_IMAGES = \"../EIDSeg_Dataset/data/train/images/default\"\n",
+    "TEST_IMAGES = \"../EIDSeg_Dataset/data/test/images/default\"\n",
+    "\n",
+    "IMAGE_SIZE = (64, 64)\n",
+    "NUM_ITER = 2000\n",
+    "LR = 0.001"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f89309e-f923-4d85-ade0-b19f4e1e04c8",
    "metadata": {},
    "outputs": [],
    "source": [
