L_layer_model updated

--- a/notebooks/03.0_L_layer_model.ipynb
+++ b/notebooks/03.0_L_layer_model.ipynb
@@ -42,13 +42,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bc8cccc2-bb13-488a-ba42-a7d83a017834",
+   "metadata": {},
+   "source": [
+    "## Load and parse XML labels"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f89309e-f923-4d85-ade0-b19f4e1e04c8",
+   "id": "74701c19-772b-47e3-9079-8a5360f4cdc5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "layers_dims = [12288, 20, 7, 5, 1] #  4-layer model"
+    "labels_train_raw = parse_cvat_xml_all_labels(TRAIN_XML)\n",
+    "labels_test_raw = parse_cvat_xml_all_labels(TEST_XML)\n",
+    "\n",
+    "Y_train_map = label_Y_binary(labels_train_raw)\n",
+    "Y_test_map = label_Y_binary(labels_test_raw)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e0a4368-8520-464d-9667-e267356c9c2c",
+   "metadata": {},
+   "source": [
+    "## Load and preprocess images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89701a97-401b-4aa5-86f1-86fec59e448b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_org, ordered_train = load_and_resize_images(TRAIN_IMAGES, size=IMAGE_SIZE)\n",
+    "X_test_org, ordered_test = load_and_resize_images(TEST_IMAGES, size=IMAGE_SIZE)\n",
+    "\n",
+    "Y_train_org = build_label_array(ordered_train, Y_train_map)\n",
+    "Y_test_org = build_label_array(ordered_test, Y_test_map)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dc79030-d525-4226-99ea-807fd3551902",
+   "metadata": {},
+   "source": [
+    "## Flatten Inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8951f197-585e-46c9-affe-0127a1c2b1fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_x = X_train_org.reshape(X_train_org.shape[0], -1).T\n",
+    "test_x = X_test_org.reshape(X_test_org.shape[0], -1).T\n",
+    "\n",
+    "print(train_x.shape, Y_train_org.shape)\n",
+    "print(test_x.shape, Y_test_org.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1df42422-8432-4c33-9d0d-f729c0650a93",
+   "metadata": {},
+   "source": [
+    "## L-layer Neural Network\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74fc1c3c-7f38-4e97-8b9a-bc853904ef6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layers_dims = [12288, 20, 7, 5, 1] "
    ]
   },
   {
@@ -105,6 +179,16 @@
     "            costs.append(cost)\n",
     "    \n",
     "    return parameters, costs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c1f0cb4-f726-4a79-b494-a3d300f093f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameters, costs = L_layer_model(train_x, train_y, layers_dims, num_iterations = 2500, print_cost = True)"
    ]
   }
  ],
