--- a/notebooks/01.0_Logistic_regression_concise.ipynb
+++ b/notebooks/01.0_Logistic_regression_concise.ipynb
@@ -62,7 +62,9 @@
   {
    "cell_type": "markdown",
    "id": "42cdba1f-6f1f-4595-9ba2-b4e240ab83d8",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Load and parse XML labels"
    ]
