--- a/notebooks/03.0_L_layer_model.ipynb
+++ b/notebooks/03.0_L_layer_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "d01ecebc-c031-4585-84bc-c386bf069372",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b82b3a4d-53e8-46a5-a9da-e472a5c311ce",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ae8b83f5-0358-4900-8d73-5bd29532bdd3",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "74701c19-772b-47e3-9079-8a5360f4cdc5",
    "metadata": {},
    "outputs": [],
@@ -73,10 +73,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "89701a97-401b-4aa5-86f1-86fec59e448b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final X shape: (2612, 64, 64, 3)\n",
+      "Final X shape: (327, 64, 64, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "X_train_org, ordered_train = load_and_resize_images(TRAIN_IMAGES, size=IMAGE_SIZE)\n",
     "X_test_org, ordered_test = load_and_resize_images(TEST_IMAGES, size=IMAGE_SIZE)\n",
@@ -95,10 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8951f197-585e-46c9-affe-0127a1c2b1fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12288, 2612) (1, 2612)\n",
+      "(12288, 327) (1, 327)\n"
+     ]
+    }
+   ],
    "source": [
     "train_x = X_train_org.reshape(X_train_org.shape[0], -1).T\n",
     "test_x = X_test_org.reshape(X_test_org.shape[0], -1).T\n",
@@ -117,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "74fc1c3c-7f38-4e97-8b9a-bc853904ef6e",
    "metadata": {},
    "outputs": [],
@@ -127,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f92311b7-7e2c-4b5a-b330-70c73fb366fc",
    "metadata": {},
    "outputs": [],
@@ -186,9 +204,59 @@
    "execution_count": null,
    "id": "0c1f0cb4-f726-4a79-b494-a3d300f093f1",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost after iteration 0: 0.636104091418676\n",
+      "Cost after iteration 100: 0.5821166290497682\n",
+      "Cost after iteration 200: 0.5680560386139355\n",
+      "Cost after iteration 300: 0.5598642204551367\n",
+      "Cost after iteration 400: 0.5527998727197412\n",
+      "Cost after iteration 500: 0.5445039381704909\n",
+      "Cost after iteration 600: 0.5337375044639118\n",
+      "Cost after iteration 700: 0.5416522764104826\n",
+      "Cost after iteration 800: 0.5232626369433263\n",
+      "Cost after iteration 900: 0.5145906320741533\n",
+      "Cost after iteration 1000: 0.5084620409315832\n",
+      "Cost after iteration 1100: 0.5185540249584121\n",
+      "Cost after iteration 1200: 0.525599631712829\n",
+      "Cost after iteration 1300: 0.4793718900127803\n",
+      "Cost after iteration 1400: 0.46298685831653785\n",
+      "Cost after iteration 1500: 0.4716433920133009\n",
+      "Cost after iteration 1600: 0.5207681572443652\n",
+      "Cost after iteration 1700: 0.457336810979845\n",
+      "Cost after iteration 1800: 0.44111478011260247\n",
+      "Cost after iteration 1900: 0.5495052634519821\n",
+      "Cost after iteration 2000: 0.38406075316504124\n",
+      "Cost after iteration 2100: 0.34273613936422137\n",
+      "Cost after iteration 2200: 0.3543019674377907\n"
+     ]
+    }
+   ],
+   "source": [
+    "parameters, costs = L_layer_model(train_x, Y_train_org, layers_dims, num_iterations = 2500, print_cost = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df4896a2-2236-4eaa-9c56-16667579ca74",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "parameters, costs = L_layer_model(train_x, train_y, layers_dims, num_iterations = 2500, print_cost = True)"
+    "pred_train = predict(train_x, Y_train_org, parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c31ee37-18fc-44cb-91b7-f855dfc4c968",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_test = predict(test_x, Y_test_org, parameters)"
    ]
   }
  ],
