DNN implemented and tested with 92/72 accuarcy to edit hyperparameters later

--- a/notebooks/03_L_layer_model.ipynb
+++ b/notebooks/03_L_layer_model.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0c1f0cb4-f726-4a79-b494-a3d300f093f1",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,10 @@
       "Cost after iteration 1900: 0.5495052634519821\n",
       "Cost after iteration 2000: 0.38406075316504124\n",
       "Cost after iteration 2100: 0.34273613936422137\n",
-      "Cost after iteration 2200: 0.3543019674377907\n"
+      "Cost after iteration 2200: 0.3543019674377907\n",
+      "Cost after iteration 2300: 0.36191252313279354\n",
+      "Cost after iteration 2400: 0.3802289190899638\n",
+      "Cost after iteration 2499: 0.3276495833763561\n"
      ]
     }
    ],
@@ -241,23 +244,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "df4896a2-2236-4eaa-9c56-16667579ca74",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9230474732006128\n"
+     ]
+    }
+   ],
    "source": [
     "pred_train = predict(train_x, Y_train_org, parameters)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "5c31ee37-18fc-44cb-91b7-f855dfc4c968",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.72782874617737\n"
+     ]
+    }
+   ],
    "source": [
     "pred_test = predict(test_x, Y_test_org, parameters)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0d888c1-c55f-489e-b7ff-bfa833da5c6e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
