tested with layers_dims = [12288, 64, 20, 5, 1] 70% accuarcy

--- a/notebooks/03_L_layer_model.ipynb
+++ b/notebooks/03_L_layer_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d01ecebc-c031-4585-84bc-c386bf069372",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b82b3a4d-53e8-46a5-a9da-e472a5c311ce",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ae8b83f5-0358-4900-8d73-5bd29532bdd3",
    "metadata": {},
    "outputs": [],
@@ -37,8 +37,7 @@
     "TEST_IMAGES = \"../EIDSeg_Dataset/data/test/images/default\"\n",
     "\n",
     "IMAGE_SIZE = (64, 64)\n",
-    "NUM_ITER = 2000\n",
-    "LR = 0.001"
+    "NUM_ITER = 2000"
    ]
   },
   {
@@ -51,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "74701c19-772b-47e3-9079-8a5360f4cdc5",
    "metadata": {},
    "outputs": [],
@@ -73,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "89701a97-401b-4aa5-86f1-86fec59e448b",
    "metadata": {},
    "outputs": [
@@ -104,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "8951f197-585e-46c9-affe-0127a1c2b1fe",
    "metadata": {},
    "outputs": [
@@ -135,17 +134,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "74fc1c3c-7f38-4e97-8b9a-bc853904ef6e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "layers_dims = [12288, 20, 7, 5, 1] "
+    "#layers_dims = [12288, 20, 7, 5, 1] \n",
+    "layers_dims = [12288, 64, 20, 5, 1] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "f92311b7-7e2c-4b5a-b330-70c73fb366fc",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "0c1f0cb4-f726-4a79-b494-a3d300f093f1",
    "metadata": {},
    "outputs": [
@@ -209,42 +209,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cost after iteration 0: 0.636104091418676\n",
-      "Cost after iteration 100: 0.5821166290497682\n",
-      "Cost after iteration 200: 0.5680560386139355\n",
-      "Cost after iteration 300: 0.5598642204551367\n",
-      "Cost after iteration 400: 0.5527998727197412\n",
-      "Cost after iteration 500: 0.5445039381704909\n",
-      "Cost after iteration 600: 0.5337375044639118\n",
-      "Cost after iteration 700: 0.5416522764104826\n",
-      "Cost after iteration 800: 0.5232626369433263\n",
-      "Cost after iteration 900: 0.5145906320741533\n",
-      "Cost after iteration 1000: 0.5084620409315832\n",
-      "Cost after iteration 1100: 0.5185540249584121\n",
-      "Cost after iteration 1200: 0.525599631712829\n",
-      "Cost after iteration 1300: 0.4793718900127803\n",
-      "Cost after iteration 1400: 0.46298685831653785\n",
-      "Cost after iteration 1500: 0.4716433920133009\n",
-      "Cost after iteration 1600: 0.5207681572443652\n",
-      "Cost after iteration 1700: 0.457336810979845\n",
-      "Cost after iteration 1800: 0.44111478011260247\n",
-      "Cost after iteration 1900: 0.5495052634519821\n",
-      "Cost after iteration 2000: 0.38406075316504124\n",
-      "Cost after iteration 2100: 0.34273613936422137\n",
-      "Cost after iteration 2200: 0.3543019674377907\n",
-      "Cost after iteration 2300: 0.36191252313279354\n",
-      "Cost after iteration 2400: 0.3802289190899638\n",
-      "Cost after iteration 2499: 0.3276495833763561\n"
+      "Cost after iteration 0: 0.7241635561801133\n",
+      "Cost after iteration 100: 0.6661479180759993\n",
+      "Cost after iteration 200: 0.6474481262272356\n",
+      "Cost after iteration 300: 0.6345250663622681\n",
+      "Cost after iteration 400: 0.6254689330587386\n",
+      "Cost after iteration 500: 0.6189893996591092\n",
+      "Cost after iteration 600: 0.6142055357837776\n",
+      "Cost after iteration 700: 0.6103269485193432\n",
+      "Cost after iteration 800: 0.6070572789401693\n",
+      "Cost after iteration 900: 0.6036781399784718\n",
+      "Cost after iteration 1000: 0.5995746399237991\n",
+      "Cost after iteration 1100: 0.5951724741465234\n",
+      "Cost after iteration 1200: 0.5896547407833196\n",
+      "Cost after iteration 1300: 0.5834768820575619\n",
+      "Cost after iteration 1400: 0.5766653510185422\n",
+      "Cost after iteration 1500: 0.5698711553518849\n",
+      "Cost after iteration 1600: 0.5629031238036939\n",
+      "Cost after iteration 1700: 0.555555056615481\n",
+      "Cost after iteration 1800: 0.5478432439701002\n",
+      "Cost after iteration 1900: 0.5401285694072493\n",
+      "Cost after iteration 2000: 0.5340149264824757\n",
+      "Cost after iteration 2100: 0.5303676118614118\n",
+      "Cost after iteration 2200: 0.5274814921723936\n",
+      "Cost after iteration 2300: 0.5236940563604644\n",
+      "Cost after iteration 2400: 0.5208406206598071\n",
+      "Cost after iteration 2500: 0.5169013345472985\n",
+      "Cost after iteration 2600: 0.5117501840961262\n",
+      "Cost after iteration 2700: 0.5044754862945178\n",
+      "Cost after iteration 2800: 0.4834865649893785\n",
+      "Cost after iteration 2900: 0.5329959614722929\n",
+      "Cost after iteration 2999: 0.46442381010403794\n"
      ]
     }
    ],
    "source": [
-    "parameters, costs = L_layer_model(train_x, Y_train_org, layers_dims, num_iterations = 2500, print_cost = True)"
+    "parameters, costs = L_layer_model(train_x, Y_train_org, layers_dims, num_iterations = 3000, print_cost = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "df4896a2-2236-4eaa-9c56-16667579ca74",
    "metadata": {},
    "outputs": [
@@ -252,7 +257,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9230474732006128\n"
+      "Accuracy: 0.7289433384379786\n"
      ]
     }
    ],
@@ -262,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "5c31ee37-18fc-44cb-91b7-f855dfc4c968",
    "metadata": {},
    "outputs": [
@@ -270,7 +275,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.72782874617737\n"
+      "Accuracy: 0.7370030581039757\n"
      ]
     }
    ],
